--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,5 +5,5 @@
       <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
     <% end %>
   </ul>
-  <%= link_to "create new restaurant", new_restaurant_path %>
+  <%= link_to "create new restaurant", new_restaurant_path, class: "btn btn-primary my-2" %>
 </div>
