--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,3 +1,4 @@
 <div class="container mt-5">
   <%= render "form", restaurant: @restaurant %>
+  <%= link_to "back to restaurants", restaurants_path, class: "btn btn-primary my-2" %>
 </div>
