--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,13 +3,18 @@
   <p><%= @restaurant.address %></p>
   <p><%= @restaurant.phone_number %></p>
   <p><%= @restaurant.category %></p>
-  <%= link_to "back to restaurants", restaurants_path %>
-  <%= link_to "add new review", new_restaurant_review_path(@restaurant) %>
+  <%= link_to "back to restaurants", restaurants_path, class: "btn btn-primary my-2" %>
+  <%= link_to "add new review", new_restaurant_review_path(@restaurant), class: "btn btn-primary my-2" %>
   <hr>
   <p><strong>Reviews</strong></p>
   <ul class="list-group">
     <% @restaurant.reviews.each do |review| %>
-      <li class="list-group-item"><%= review.content %></li>
+      <div style="display: inline-block;">
+        <% "#{review.rating}".to_i.times do %>
+          <i class="fa fa-star" aria-hidden="true" style="color:gold;"></i>
+        <% end %>
+      </div>
+      <li class="list-group-item my-2"><%= review.content %></li>
     <% end %>
   </ul>
   <br>
