--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -5,4 +5,5 @@
     <%= f.input :content %>
     <%= f.submit "Submit review", class: "btn btn-primary" %>
   <% end %>
+  <%= link_to "back to restaurant", restaurant_path(@restaurant), class: "btn btn-primary my-2" %>
 </div>
